# EU-GDPR-Git-Validator

./: .bandit  .dockerignore  .gitignore  CI_FIXES_SUMMARY.md  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  LICENSE  README.md  SETUP.md  UX_IMPROVEMENTS_IMPLEMENTED.md  gdpr_validator_improvements.md  main.py  model.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
TINS_Edition/: GUI_progress.md  README.md  prompt.md
src/gdpr_validator/: __init__.py  cli.py  compliance_checker.py  gdpr_analyser.py  git_scanner.py  report_generator.py
tests/: __init__.py  test_basic_functionality.py
