[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdpr-git-validator"
version = "1.0.0"
description = "A compliance testing tool that analyses Git repositories for GDPR violations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "EU GDPR Git Validator Contributors", email = "support@gdpr-git-validator.org"}
]
maintainers = [
    {name = "EU GDPR Git Validator Contributors", email = "support@gdpr-git-validator.org"}
]
keywords = ["gdpr", "git", "compliance", "privacy", "data-protection", "eu", "validator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Security",
    "Topic :: Office/Business :: Legal",
    "Environment :: Console",
]
requires-python = ">=3.8"
dependencies = [
    "GitPython>=3.1.40",
    "pandas>=2.0.0",
    "jinja2>=3.1.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "reportlab>=4.0.0",
    "weasyprint>=60.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "tox>=4.11.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/EU-GDPR-Git-Validator"
Documentation = "https://eu-gdpr-git-validator.readthedocs.io/"
Repository = "https://github.com/yourusername/EU-GDPR-Git-Validator.git"
Issues = "https://github.com/yourusername/EU-GDPR-Git-Validator/issues"
Changelog = "https://github.com/yourusername/EU-GDPR-Git-Validator/blob/main/CHANGELOG.md"

[project.scripts]
gdpr-validator = "gdpr_validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
